Changed package name to match MOD ID

--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 
     <!--Hello! You'll basically should only need to change these names and the steam path (just below)-->
     <!--The author name(s) as they appear in MTS and any other comments are in your ModTheSpire.json-->
-    <groupId>defaultmod</groupId>
+    <groupId>cloinsimprovedironclad</groupId>
     <artifactId>CloinsImprovedIronclad</artifactId> <!--Keep a note of this one: this is the ID used in the "auto add cards" method-->
     <name>Cloin's Improved Ironclad</name>
-    <version>0.0.1</version>
+    <version>0.1.1</version>
     <description>Humouring Cloin's ideas and see if we can't improve some of the lesser played archetypes.</description>
 
     <properties>
