--- a/pom.xml
+++ b/pom.xml
@@ -92,17 +92,17 @@
 
         <resources>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>src/main/CloinsImprovedIroncladResources</directory>
             </resource>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>src/main/CloinsImprovedIroncladResources</directory>
                 <filtering>false</filtering>
                 <excludes>
                     <exclude>ModTheSpire.json</exclude>
                 </excludes>
             </resource>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>src/main/CloinsImprovedIroncladResources</directory>
                 <filtering>true</filtering>
                 <includes>
                     <include>ModTheSpire.json</include>
